--- a/Consultorio-Front/src/app/crear-personas/crear-personas.component.html
+++ b/Consultorio-Front/src/app/crear-personas/crear-personas.component.html
@@ -9,27 +9,27 @@
     <form [formGroup]="myForm">
       <div class="form-group">
         <label>{{ "forms.identificacion" | translate }}</label>
-        <input type="number" class="form-control" formControlName="identificacion" />
+        <input type="number" class="form-control" formControlName="identificacion" id="campoIdentificacion"/>
         <span *ngIf="controlHasError('identificacion', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
       <div class="form-group">
         <label>{{ "forms.name" | translate }}</label>
-        <input type="text" class="form-control" formControlName="nombre" />
+        <input type="text" class="form-control" formControlName="nombre" id="campoNombre"/>
         <span *ngIf="controlHasError('nombre', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
       <div class="form-group">
         <label>{{ "forms.edad" | translate }}</label>
-        <input type="number" class="form-control" formControlName="edad" />
+        <input type="number" class="form-control" formControlName="edad" id="campoEdad"/>
         <span *ngIf="controlHasError('edad', 'required')">
           <strong>{{ "validation.required_field" | translate }}</strong>
         </span>
       </div>
 
-      <button class="btn btn-primary" (click)="store()">
+      <button class="btn btn-primary" id="botonCrear" (click)="store()">
           {{ "forms.save" | translate }}
       </button>
     </form>
