--- a/Consultorio-Front/src/app/personas/personas.component.html
+++ b/Consultorio-Front/src/app/personas/personas.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-10"><h1>{{"forms.personas" | translate}}</h1></div>
       <div class="col-md-2">
-        <button class="btn btn-primary pull-right" routerLink="/crear-persona">
+        <button class="btn btn-primary pull-right" id= "botonNuevo" routerLink="/crear-persona">
           {{"forms.new" | translate}}
         </button>
       </div>
